tests/fixtures/invalid/err006_risk_blocked_pattern.rex
observe page "https://example.com?password=secret" as $page
